--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- /.logo -->
       <nav class="header__nav-box">
         <ul>
-          <li><a href="#">Featuresss</a></li>
+          <li><a href="#">Features</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="#">Company</a></li>
           <li><a href="#">Contact us</a></li>
